--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
 
     <!-- WhatsApp flotante (reemplaza el número) -->
     <a class="wa"
-        href="https://wa.me/569XXXXXXXX?text=Hola%2C%20vengo%20desde%20la%20web%20y%20quiero%20cotizar%20un%20servicio%20de%20prevenci%C3%B3n%20de%20riesgos."
+        href="https://wa.me/56972072486?text=Hola%2C%20vengo%20desde%20la%20web%20y%20quiero%20cotizar%20un%20servicio%20de%20prevenci%C3%B3n%20de%20riesgos."
         target="_blank" rel="noopener" aria-label="Contactar por WhatsApp">
         <svg viewBox="0 0 32 32" aria-hidden="true">
             <path fill="currentColor"
