--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 
     <!-- WhatsApp flotante -->
     <a class="wa"
-        href="https://wa.me/569XXXXXXXX?text=Hola%2C%20vengo%20desde%20la%20web%20y%20quiero%20cotizar%20un%20servicio%20de%20prevenci%C3%B3n%20de%20riesgos."
+        href="https://wa.me/56947057245?text=Hola%2C%20vengo%20desde%20la%20web%20y%20quiero%20cotizar%20un%20servicio%20de%20prevenci%C3%B3n%20de%20riesgos."
         target="_blank" rel="noopener" aria-label="Contactar por WhatsApp">
         <svg viewBox="0 0 32 32" aria-hidden="true">
             <path fill="currentColor"
@@ -1166,13 +1166,21 @@
             toggleBtn.setAttribute("aria-label", isDark ? "Cambiar a modo claro" : "Cambiar a modo oscuro");
         }
 
+        // const saved = localStorage.getItem("theme");
+        // if (saved === "dark" || saved === "light") {
+        //     setTheme(saved);
+        // } else {
+        //     const prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
+        //     setTheme(prefersDark ? "dark" : "light");
+        // }
+
         const saved = localStorage.getItem("theme");
         if (saved === "dark" || saved === "light") {
             setTheme(saved);
         } else {
-            const prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
-            setTheme(prefersDark ? "dark" : "light");
+            setTheme("light"); // ✅ principal = clara
         }
+
 
         toggleBtn.addEventListener("click", () => {
             const current = html.getAttribute("data-theme") || "light";
